<resources>
    <string name="app_name">Eversong App</string>

    <string name="start_record_button">Start Recording</string>
    <string name="stop_record_button">Stop Recording</string>

    <!--Chart menu tabs-->
    <string name="guitar_tab">Guitar</string>
    <string name="ukulele_tab">Ukulele</string>
    <string name="piano_tab">Piano</string>
    <string name="staff_tab">Staff</string>
    <string name="chromagram_tab">Chroma</string>

    <!--Functionalities-->
    <string name="chord_detection_functionality">Chord detect.</string>
    <string name="chord_score_functionality">Chord lib</string>
    <string name="tuning_functionality">Tuning</string>

    <!--Top right menu-->
    <string name="open_settings_menu">Settings</string>
    <string name="open_credits">Credits</string>
    <string name="close_app">Close App</string>

    <!--Settings-->
    <string name="setting_musical_notation">Musical notation</string>
    <string name="setting_english_notation">English notation (A, B…)</string>
    <string name="setting_solfege_notation">Solfège notation (La, Si…)</string>
    <string name="setting_windowing">Window function</string>
    <string name="setting_rectangular_window">Rectangular window</string>
    <string name="setting_hanning_window">Hanning window</string>
    <string name="setting_hamming_window">Hamming window</string>
    <string name="setting_blackman_window">Blackman window</string>
    <string name="setting_chord_buffer_size">Chord buffer size</string>
    <string name="setting_pitch_buffer_size">Pitch buffer size</string>
    <string name="setting_audio_buffer_size">Audio buffer size</string>
    <string name="setting_bandpass_filter_low_freq">Bandpass filter low freq</string>
    <string name="setting_bandpass_filter_high_freq">Bandpass filter high freq</string>
    <string name="setting_chord_detector_algorithm">Chord detection algorithm</string>
    <string name="setting_adam_stark_algorithm">Adam Stark algorithm</string>
    <string name="setting_eversong_algorithm_1">Eversong algorithm 1</string>
    <string name="setting_eversong_algorithm_2">Eversong algorithm 2</string>
    <string name="setting_chromagram_num_harmonics">Chromagram num of harmonics</string>
    <string name="setting_chromagram_num_octaves">Chromagram num of octaves</string>
    <string name="setting_chromagram_num_bins">Chromagram num of bins</string>
    <string name="debug_mode">Debug Mode</string>

    <!--Toasts-->
    <string name="toast_debug_mode_enabled">Debug mode enabled</string>
    <string name="toast_debug_mode_disabled">Debug mode disabled</string>
    <string name="toast_chart_menu_guitar">Guitar</string>
    <string name="toast_chart_menu_ukulele">Ukulele</string>
    <string name="toast_chart_menu_piano">Piano</string>
    <string name="toast_chart_menu_staff">Staff</string>
    <string name="toast_chart_menu_chromagram">Chromagram</string>
    <string name="toast_functionalities_menu_chord_detection">Chord detection</string>
    <string name="toast_functionalities_menu_chord_library">Chord library</string>
    <string name="toast_functionalities_menu_tuner">Tuner</string>

    <!--Credits-->
    <string name="credits_recording_audio_in_android">-New Venture Software.\nRecord, Replay and Visualize Raw Audio Data in Android.\nOct 12, 2017.</string>
    <string name="credits_adam_stark_algorithm">-Chord detector and Chromagram algorithm.\nDeveloped by Adam Stark</string>
    <string name="credits_yin_algorithm">-YIN, a fundamental frequency estimator for speech and music.\nDeveloped by A. de Cheveigné and H. Kawahara.</string>
    <string name="credits_fft_algorithm">-Orlando Selenu, FFT Java code. Oct 7, 2011.</string>
    <string name="credits_app_icon">-Icon made by SimpleIcon from www.flaticon.com </string>
    <string name="credits_freepik_icon">-Icons made by Freepik from www.flaticon.com </string>
    <string name="credits_bqlqn_icon">-Icon made by Bqlqn from www.flaticon.com </string>
</resources>
