<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="10dp"
    android:layout_width="10dp"
    tools:context=".EversongActivity">

    <item android:id="@+id/open_guitar_tab"
        android:title="@string/guitar_tab"
        app:showAsAction="never"/>
    <item android:id="@+id/open_ukulele_tab"
        android:title="@string/ukulele_tab"
        app:showAsAction="never"/>
    <item android:id="@+id/open_staff_tab"
        android:title="@string/staff_tab"
        app:showAsAction="never"/>
    <item android:id="@+id/open_chromagram"
        android:title="@string/chromagram_tab"
        app:showAsAction="never"/>
    <item android:id="@+id/open_settings_menu_option"
        android:title="@string/open_settings_menu"
        app:showAsAction="never"/>
    <item android:id="@+id/exit_app_option"
        android:title="@string/close_app"
        app:showAsAction="never"/>
</menu>